--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.11",
     "pg": "^8.11.5",
     "resend": "^6.5.2",
     "sequelize": "^6.37.3"
